Enhance order creation process by integrating product service for stock validation and price retrieval. Update CreateOrderCommandHandler to fetch product details, validate stock availability, and calculate item prices accordingly. Modify application.yml to include product service URL configuration. Refactor SearchProductsQueryHandler to utilize JPA specifications for improved product querying capabilities.